[tool.poetry]
name = "explosm-bot"
version = "1.0.0"
description = "A Twitter bot that prints randomly-generated comics"
authors = ["Alex The JPEG <alexthejpeg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
tweepy = "^4.12.1"
Pillow = "^9.3.0"
boto3 = "^1.26.37"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
