[tool.poetry]
name = "explosm-bot"
version = "1.0.0"
description = "A Twitter bot that prints randomly-generated comics"
authors = ["Alex The JPEG <alexthejpeg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Pillow = "^9.3.0"
mastodon-py = "^1.8.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.37"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
