[tool.poetry]
name = "explosm-bot"
version = "1.1.0"
description = "A Mastodon bot that prints randomly-generated comics"
authors = ["Alex The JPEG <alexthejpeg@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Pillow = "^9.3.0"
mastodon-py = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
python-dotenv = "^1.0.0"
ruff = "^0.0.280"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
